--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,24 @@
-//group 'com.suixingpay'
-//version '1.0'
-//
-//allprojects {
-//    repositories {
-//        maven {
-//            name "aliyunmaven"
-//            url "http://maven.aliyun.com/nexus/content/groups/public/"
-//        }
-//    }
-//}
-buildscript { // buildscript 不能抽取出来，只能重复写。
-    ext{
-        sxGradleHome = "http://192.168.120.68/root/gradle-scripts/raw/master/"
-    }
-    apply from: sxGradleHome + "maven.gradle"
-    apply from: sxGradleHome + "spring-cloud-greenwich.gradle" // 导入使用Spring Cloud及相应的Spring Boot版本号
-    repositories {
-        maven { url REPOSITORY_URL }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties:2.0.0")
-    }
+plugins {
+    id 'java'
 }
 
-subprojects {
-    // 参考 http://192.168.120.68/root/gradle-scripts
-    apply from: sxGradleHome + "maven.gradle"
-    apply from: sxGradleHome + "spring-cloud2.gradle"
+group 'com.suixingpay'
+version '1.0'
 
-    version = "1.0.0-SNAPSHOT"  // 开发版本： -SNAPSHOT 正式版本：.RELEASE
-    group = "com.spark"
-    description = "spring boot in action"
+sourceCompatibility = 1.8
 
-    dependencies {
-        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-        compileOnly("org.springframework.boot:spring-boot-configuration-processor")
-        compileOnly('org.projectlombok:lombok')
-        testCompile('org.projectlombok:lombok')
+repositories {
+    mavenCentral()
+}
 
-    }
+dependencies {
+//    测试gradle文件上传
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.1.4.RELEASE'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.6.RELEASE'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.3.RELEASE'
+    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
+    compile 'org.apache.poi:poi:3.17'
+    compile group: 'org.apache.directory.studio', name: 'org.apache.commons.lang', version: '2.6'
 }
